# ResearGent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
eval_suites/: sample.yaml
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentNode.tsx  CameraRig.tsx  Edges.tsx  HistorySidebar.tsx  LogPanel.tsx  NarrativeOverlay.tsx  Overlay.tsx  Particles.tsx  PaywallModal.tsx  ResultModal.tsx  Scene.tsx  SearchBar.tsx  SignInLanding.tsx  UserMenu.tsx
frontend/lib/: graph-config.ts  store.ts  types.ts
notes/: README.md
notes/_examples/: Atomic Note Example.md  Daily Research Log Example.md  Index Example.md  Project Note Example.md
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: api.ts  main.ts  settings.ts  types.ts  view.ts
src/: __init__.py  config.py  db.py  db_schema.py  domains.py  main.py  registry.py  store.py
src/agent/: __init__.py  artifacts.py  graph.py  run.py  save.py  state.py  stream.py  vault_writer.py
src/agent/nodes/: __init__.py  critic.py  generator.py  llm_reasoning.py  paper_discovery.py  planner.py  reflector.py  retriever.py  rewriter.py  web_fallback.py
src/api/: __init__.py  app.py
src/api/web/: index.html
src/auth/: __init__.py  deps.py  routes.py  session.py  users.py
src/billing/: __init__.py  quota.py  razorpay_client.py  routes.py  subscription.py  threads.py
src/eval/: __init__.py  metrics.py  runner.py
src/ingest/: __init__.py  chunker.py  obsidian.py  pdf.py  pipeline.py  s2_seed.py
src/llm/: __init__.py  observability.py  provider.py
src/rag/: __init__.py  hybrid.py  naive.py
src/retrieval/: __init__.py  bm25.py  graph.py  hybrid.py  naive.py  papers.py  web.py
