[project]
name = "researgent"
version = "0.1.0"
description = "Agentic Research Engine with Corrective RAG & Self-Reflection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Saumya Bisht" }]
license = { text = "MIT" }

# Phase 0 dependencies only.
# Each phase adds its own — keeps installs lean and the learning curve gentle.
dependencies = [
    "openai>=1.55.0",        # used for NVIDIA NIM, Groq, AND Ollama (all OpenAI-compatible)
    "python-dotenv>=1.0.1",  # load .env into os.environ
    "pydantic>=2.9.0",       # typed config
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",          # pretty CLI output
    "typer>=0.13.0",         # CLI framework
    # ---- Phase 1: ingestion + naive RAG ----
    "pymupdf>=1.24.0",       # PDF parsing — handles academic 2-col layouts well
    "numpy>=2.0",            # vector math for our tiny custom store
    "tiktoken>=0.8.0",       # token counting for size-aware chunking
    # NOTE: we deliberately do NOT use chromadb — its onnxruntime + hnswlib
    # cold-import on Windows CPUs can take 60-120s. For our scale (<10k
    # chunks) a numpy-backed cosine search in src/store.py is faster, has no
    # ML dependencies, and starts in <100ms.
    # ---- Phase 2: hybrid retrieval ----
    "rank-bm25>=0.2.2",      # BM25Okapi — classic lexical retrieval
    # ---- Phase 3: agent graph ----
    "langgraph>=0.6",                  # stateful directed agent graphs
    "langgraph-checkpoint-sqlite>=2.0", # SQLite-backed checkpointing for replay/audit
    # ---- Phase 4: corrective RAG ----
    "tavily-python>=0.7",              # primary web search (1000/mo free, snippet-tuned)
    "ddgs>=9.0",                       # DuckDuckGo HTML-scrape last-resort (no key, unlimited)
    # NOTE: Serper.dev uses raw HTTP via httpx (already a dep) — no extra package.
    # ---- Phase 6: eval + API + UI ----
    "pyyaml>=6.0",                     # eval suites are YAML for human-editable test sets
    "fastapi>=0.115",                  # backend API
    "uvicorn[standard]>=0.32",         # ASGI server
    "sse-starlette>=2.1",              # Server-Sent Events for live agent streaming
    # ---- Phase 7: open-domain paper discovery ----
    "arxiv>=2.1",                      # official arXiv API wrapper (free, no key)
    # Semantic Scholar uses raw HTTP via httpx (already a dep).
    "sqlalchemy>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    # ---- Phase 14: semantic chunking + local entity extraction ----
    # Local NLP, CPU-only — keeps the ingest pipeline on the free-tier budget.
    # sentence-transformers brings torch; gliner brings a small transformer head.
    # Both models are cached after first download (~80MB MiniLM + ~150MB GLiNER-small).
    "sentence-transformers>=3.0.0",
    "gliner>=0.2.13",
    # ---- Phase 15.1: full-text enrichment for Stage-2 paper discovery ----
    # pypdf is pure-Python — no native deps. PyMuPDF is already in the tree
    # for the ingestion path (and is faster), but the paper-discovery fallback
    # runs ad-hoc on arbitrary OA URLs where robustness matters more than
    # throughput. pypdf's exception surface (`PdfReadError` for corrupted
    # bytes, clear password-prompt detection) maps cleanly to the try/except
    # fallback flow the spec calls for.
    "pypdf>=5.0",
]

[project.optional-dependencies]
# Later phases will populate these. Listed now so the structure is visible.
retrieval = []   # Phase 2: rank_bm25
agents = []      # Phase 3: langgraph
web = []         # Phase 4: tavily, playwright
eval = []        # Phase 6: ragas, deepeval
api = []         # Phase 6: fastapi, uvicorn, sse-starlette
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
]

# Phase 1: ingestion + naive RAG. Promoted to core dependencies below.

[project.scripts]
researgent = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
